--- a/campo.html
+++ b/campo.html
@@ -2,100 +2,55 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email Responsivo</title>
+  <title>Validação de Email</title>
   <style>
-    /* Media query para responsividade */
-    @media only screen and (max-width: 600px) {
-      .wrapper {
-        width: 100% !important;
-        padding: 0 10px !important;
-      }
-      .two-col {
-        display: block !important;
-        width: 100% !important;
-      }
-      .button td {
-        display: block !important;
-        width: 100% !important;
-      }
+    .erro {
+      color: red;
+      font-size: 0.9em;
+      display: none;
+    }
+    input:invalid {
+      border-color: red;
+    }
+    input:valid {
+      border-color: green;
     }
   </style>
 </head>
-<body style="margin:0; padding:0; background:#f4f4f4; font-family:Arial, sans-serif;">
+<body>
+  <form id="formEmail" novalidate>
+    <label for="email">Email:</label><br>
+    <!-- validação nativa com HTML5 -->
+    <input type="email" id="email" name="email" required
+      pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+      placeholder="exemplo@dominio.com"><br>
+    <span id="mensagemErro" class="erro">Por favor, insira um email válido.</span><br><br>
+    <button type="submit">Enviar</button>
+  </form>
 
-  <table width="100%" cellpadding="0" cellspacing="0" role="presentation">
-    <tr>
-      <td align="center">
-        <table class="wrapper" width="600" cellpadding="0" cellspacing="0" bgcolor="#ffffff" style="max-width:600px;">
-          
-          <!-- Header -->
-          <tr>
-            <td align="center" style="padding:20px; background:#007BFF; color:#ffffff;">
-              <h1 style="margin:0; font-size:24px;">Boas-vindas!</h1>
-            </td>
-          </tr>
+  <script>
+    const form = document.getElementById('formEmail');
+    const emailInput = document.getElementById('email');
+    const erroSpan = document.getElementById('mensagemErro');
 
-          <!-- Conteúdo -->
-          <tr>
-            <td style="padding:20px; color:#333333; font-size:16px; line-height:1.5;">
-              <p>Olá,</p>
-              <p>Obrigado por se inscrever na nossa newsletter. Veja o que preparamos para você:</p>
-              <table width="100%" cellpadding="0" cellspacing="0" role="presentation">
-                <tr class="two-col">
-                  <td style="padding:10px;" width="50%">
-                    <strong>✅ Conteúdo exclusivo</strong>
-                  </td>
-                  <td style="padding:10px;" width="50%">
-                    <strong>🎯 Dicas semanais</strong>
-                  </td>
-                </tr>
-                <tr class="two-col">
-                  <td style="padding:10px;" width="50%">
-                    <strong>💰 Ofertas especiais</strong>
-                  </td>
-                  <td style="padding:10px;" width="50%">
-                    <strong>📚 Tutoriais gratuitos</strong>
-                  </td>
-                </tr>
-              </table>
+    form.addEventListener('submit', e => {
+      e.preventDefault();
 
-              <!-- Botão -->
-              <table class="button" cellpadding="0" cellspacing="0" width="100%" role="presentation" style="margin:20px 0;">
-                <tr>
-                  <td align="center">
-                    <table cellpadding="0" cellspacing="0" role="presentation">
-                      <tr>
-                        <td style="background:#28a745; border-radius:5px; padding:12px 24px;">
-                          <a href="https://exemplo.com" target="_blank" style="color:#ffffff; text-decoration:none; font-size:16px; display:block;">
-                            Começar agora
-                          </a>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
+      if (emailInput.checkValidity()) {
+        erroSpan.style.display = 'none';
+        alert('Email válido! Formulário enviado.');
+        form.reset();
+      } else {
+        erroSpan.style.display = 'block';
+        emailInput.focus();
+      }
+    });
 
-          <!-- Footer -->
-          <tr>
-            <td style="padding:20px; font-size:12px; color:#999999; text-align:center;">
-              Você está recebendo este email porque se inscreveu em nosso site.<br>
-              <a href="https://exemplo.com/unsubscribe" style="color:#007BFF; text-decoration:none;">Cancelar inscrição</a> |
-              <a href="https://exemplo.com/privacy" style="color:#007BFF; text-decoration:none;">Política de privacidade</a><br><br>
-              Siga-nos:
-              <a href="https://twitter.com/exemplo" style="color:#007BFF; text-decoration:none;">Twitter</a> |
-              <a href="https://facebook.com/exemplo" style="color:#007BFF; text-decoration:none;">Facebook</a>
-            </td>
-          </tr>
-
-        </table>
-      </td>
-    </tr>
-  </table>
-
+    emailInput.addEventListener('input', () => {
+      if (emailInput.validity.valid) {
+        erroSpan.style.display = 'none';
+      }
+    });
+  </script>
 </body>
 </html>
